--- a/AssemblyBrowser/AssemblyBrowser.csproj
+++ b/AssemblyBrowser/AssemblyBrowser.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Field.cs" />
     <Compile Include="GenericChecker.cs" />
     <Compile Include="Method.cs" />
+    <Compile Include="NamespaceInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property.cs" />
   </ItemGroup>
