--- a/AssemblyBrowser/AssemblyBrowser.csproj
+++ b/AssemblyBrowser/AssemblyBrowser.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyBrowser.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ClassInfo.cs" />
     <Compile Include="Field.cs" />
