--- a/AssemblyBrowser/AssemblyBrowser.csproj
+++ b/AssemblyBrowser/AssemblyBrowser.csproj
@@ -43,8 +43,10 @@
     <Compile Include="AssemblyBrowser.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ClassInfo.cs" />
+    <Compile Include="ClassInfoElements.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="GenericChecker.cs" />
+    <Compile Include="IElement.cs" />
     <Compile Include="Method.cs" />
     <Compile Include="NamespaceInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
