--- a/AssemblyBrowserWPF/AssemblyBrowserWPF.csproj
+++ b/AssemblyBrowserWPF/AssemblyBrowserWPF.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{631C68DD-7EB9-42AA-83C6-2168821C2C56}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AssemblyBrowser</RootNamespace>
-    <AssemblyName>AssemblyBrowser</AssemblyName>
+    <RootNamespace>AssemblyBrowserWPF</RootNamespace>
+    <AssemblyName>AssemblyBrowserWPF</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
